# AlmaHash

./: .gitignore  CMakeLists.txt
CipherFunc/: CMakeLists.txt  Cipher.c  Cipher.h  PermutationTable.h
HashFunc/: CMakeLists.txt  Cipher.c  Cipher.h  HashFunc.c  HashFunc.h
Hasher/: CMakeLists.txt  Hasher.cpp
