project("CipherFunc")
if(CMAKE_BUILD_TYPE MATCHES DEBUG)
	message("Optymalizacje wyłączona podczas debugowania")
else()
	if (MSVC)
		#add_compile_options("/O2 /Oi /Arch:AVX2")
	endif()
endif(CMAKE_BUILD_TYPE MATCHES DEBUG)
add_compile_definitions(CIPHER_EXPORTS)
add_library(CipherFunc SHARED "Cipher.h" "Cipher.c" "PermutationTable.h")
